--- a/templates/base.html
+++ b/templates/base.html
@@ -57,11 +57,11 @@
   >
     <header>
       <!-- navbar start -->
-      <nav class="bg-stone-200 align-middle p-0 fixed w-full h-11 top-0 z-10">
-        <div class=" h-full flex justify-between align-center mx-0.5">
+      <nav class="bg-stone-200 align-middle p-0 fixed w-full h-11 top-0 z-10 z-[5]">
+        <div class=" h-full flex justify-between items-center mx-0.5">
           <!-- nav starts -->
           <div class="flex">
-            <div class="relative" data-targetid="menu" onclick="toggleHide()">
+            <div class="" onclick="toggleHide('menu')">
               <div tabindex="0" role="button" class="btn btn-ghost m-0">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -82,8 +82,11 @@
               <ul
                 tabindex="0"
                 id="menu"
-                class="menu menu-sm hidden absolute top-10 left-5  bg-stone-200 rounded-box z-[1] mt-3 w-52 p-2 shadow"
-              >
+                class="menu menu-lg h-screen w-2/3 md:w-2/5 hidden absolute -top-1 left-0  bg-stone-200 rounded-box z-[1] mt-3 p-2 shadow z-[2]"
+                >
+                <li class="w-full flex items-end text-right w-18 rounded-lg rounded-lg">
+                    <img src="{% static 'images/close.png' %}" alt="close" class="w-20">
+                </li>
                 <li
                   class="active hover:text-navbar-hover text-navbar-active transition-all ease-in-out duration-200"
                 >
@@ -102,6 +105,12 @@
                     class="hover:text-navbar-hover transition-all ease-in-out duration-200"
                     >Our App</a
                   >
+                </li><li>
+                  <a
+                    href="#"
+                    class="hover:text-navbar-hover transition-all ease-in-out duration-200"
+                    >Notices</a
+                  >
                 </li>
                 <li>
                   <a
@@ -118,14 +127,13 @@
                   >
                 </li>
                 <div class="divider md:hidden"></div>
-                <div class="lg ml-1">
+                <div class="lg ml-1 md:hidden">
                   <a
-                    class="py-2 hover:text-navbar-hover rounded-lg cursor-pointer pl-2 text-sm active text-navbar-active transition-all ease-in-out duration-200"
+                    class="py-2 hover:text-navbar-hover rounded-lg cursor-pointer pl-2 text-lg  transition-all ease-in-out duration-200"
                     >Bangla</a
                   >/<a
-                    class="hover:text-navbar-hover text-sm py-2 pr-2 cursor-pointer rounded-lg transition-all ease-in-out duration-200"
-                    >English</a
-                  >
+                    class="hover:text-navbar-hover text-navbar-active text-lg py-2 pr-2 cursor-pointer rounded-lg transition-all ease-in-out duration-200"
+                    >English</a>
                 </div>
               </ul>
             </div>
@@ -143,16 +151,15 @@
           </div>
           <div class="h-full relative">
             <a href="#" class="text-center whitespace-nowrap text-xl absolute top-1 left-0 -translate-x-1.11 translate-y-1">
-              Vasha Academy</a>
+              Vasha Academy
+            </a>
           </div>
           <div class="">
-            <a
-              class="btn bg-navbar-active hover:bg-navbar-hover text-white transition-all ease-in-out duration-200 hidden"
-              >Login/Sign up</a
-            >
-            <!-- main -->
+
+            {% if request.user.is_authenticated %}
+
             <div class="relative">
-              <div tabindex="0" data-targetid="profile" class="btn btn-ghost avatar flex items-center gap-1">
+              <div tabindex="0" onclick="toggleHide('profile')" class="btn btn-ghost avatar flex items-center gap-1">
                 <div class="ring-primary ring-offset-base-100 w-8 rounded-full ring-offset-2 ring-1">
                   <img
                     alt="USer image"
@@ -163,7 +170,7 @@
               <ul
                 tabindex="0"
                 id="profile"
-                class="absolute right-5 top-12 hidden menu menu-sm dropdown-content bg-stone-200 rounded-b-md z-[1] mt-3 w-52 p-2 shadow text-2xl space-y-2">
+                class="absolute right-5 top-12 hidden menu menu-sm bg-stone-200 rounded-b-md z-[1] mt-3 w-52 p-2 shadow text-2xl space-y-2">
                 <li><a>Mohammad Saikat Islam</a></li>
                 <li><a>01521771635</a></li>
                 <li><a
@@ -172,6 +179,13 @@
                 ></li>
               </ul>
             </div>
+            {% else %}
+            <a
+              class="bg-navbar-active hover:bg-navbar-hover text-white transition-all ease-in-out duration-200 rounded-lg my-2 mt-2 p-2 h-5"
+              >Login/Sign up
+            </a>
+             {% endif %}
+
           </div>
         </div>
       </nav>
@@ -230,66 +244,24 @@
     </main>
 
     <footer>
-      <!-- color dile diye dite paro bg-gray-900 -->
-      <Sectionn class="flex justify-center">
-       <button type="button" class="flex items-center justify-center w-54 text-white bg-black rounded-lg h-14">
-            <div class="mr-3">
-                <svg viewBox="30 336.7 120.9 129.2" width="30">
-                    <path fill="#FFD400"
-                        d="M119.2,421.2c15.3-8.4,27-14.8,28-15.3c3.2-1.7,6.5-6.2,0-9.7  c-2.1-1.1-13.4-7.3-28-15.3l-20.1,20.2L119.2,421.2z">
-                    </path>
-                    <path fill="#FF3333"
-                        d="M99.1,401.1l-64.2,64.7c1.5,0.2,3.2-0.2,5.2-1.3  c4.2-2.3,48.8-26.7,79.1-43.3L99.1,401.1L99.1,401.1z">
-                    </path>
-                    <path fill="#48FF48" d="M99.1,401.1l20.1-20.2c0,0-74.6-40.7-79.1-43.1  c-1.7-1-3.6-1.3-5.3-1L99.1,401.1z">
-                    </path>
-                    <path fill="#3BCCFF"
-                        d="M99.1,401.1l-64.3-64.3c-2.6,0.6-4.8,2.9-4.8,7.6  c0,7.5,0,107.5,0,113.8c0,4.3,1.7,7.4,4.9,7.7L99.1,401.1z">
-                    </path>
-                </svg>
-            </div>
-            <div>
-                <div class="text-xs">
-                    GET IT ON
-                </div>
-                <div class="-mt-1 font-sans text-xl font-semibold">
-                    Google Play
-                </div>
-            </div>
-            <div class="rounded-full m-2 w-12">
-              <img class="rounded-full" src="https://st.depositphotos.com/1491329/2998/i/450/depositphotos_29984153-stock-photo-spring-nature-beautiful-landscape-green.jpg" alt="App logo">
-            </div>
-        </button>
-      </Sectionn>
+
       <section class="py-6">
-        <!-- Payment Section -->
-        <h3 class="text-title-text text-xl text-center lg:text-2xl font-bold">Payment With</h3>
-        <div class="flex flex-col lg:flex-row justify-center items-center gap-3">
-          <a href="">
-            <img src="{% static 'images/BKash-bKash-Logo.wine.svg' %}" alt="bkash" class="w-44">
-          </a>
-          <a>
-            <img src="{% static 'images/Nagad-Logo.wine.svg' %}" alt="Nagad" class="w-44">
-          </a>
-          <a href="">
-            <img src="{% static 'images/PayPal-Logo.wine.svg' %}" alt="" class="w-44">
-          </a>
-        </div>
         <!-- follow us -->
         <h3 class="text-title-text text-xl text-center lg:text-2xl font-bold pt-10 pb-4">Follow Us</h3>
         <div class="flex justify-center items-center gap-8">
           <a href="#"><i class="text-4xl text-blue-600 fa-brands fa-facebook"></i></a>
           <a href="#"><i class="text-4xl text-red-700 fa-brands fa-youtube"></i></a>
           <a href="#"><i class="text-4xl text-rose-900 fa-brands fa-instagram"></i></a>
-          <a href="#"><i class="fa-brands text-4xl fa-x-twitter"></i></a>
+          <a href="#" class="bg-white rounded-lg"><i class="fa-brands text-4xl fa-x-twitter bg-state-500"></i></a>
         </div>
+
         <!-- contact us -->
         <h3 class="text-title-text text-xl text-center lg:text-2xl font-bold pt-10 pb-4">Contact Us</h3>
         <div class="flex justify-center">
         <div class="space-y-3">
-          <div class="flex gap-8 items-center"><i class="text-2xl text-blue-400 fa-solid fa-phone"></i><p class="text-primary-text/80">16780</p></div>
-          <div class="flex gap-8 items-center"><i class="text-2xl text-yellow-600 fa-solid fa-message"></i></i><p class="text-primary-text/80">team@vashaacademy</p></div>
-          <div class="flex gap-8 items-center"><i class="fa-solid text-2xl text-green-700 fa-location-dot"></i><p class="text-primary-text/80">gulistan,dhaka,bd</p></div>
+          <div class="flex gap-2 items-center bg-pink-900 p-2 rounded-lg"><i class="text-2xl text-blue-400 fa-solid fa-phone"></i><p class="text-primary-text/80">16780</p></div>
+          <div class="flex gap-2 items-center bg-pink-900 p-2 rounded-lg"><i class="text-2xl text-yellow-600 fa-solid fa-message"></i></i><p class="text-primary-text/80">team@vashaacademy</p></div>
+          <div class="flex gap-2 items-center bg-pink-900 p-2 rounded-lg"><i class="fa-solid text-2xl text-green-700 fa-location-dot"></i><p class="text-primary-text/80">gulistan,dhaka,bd</p></div>
         </div></div>
       </section>
       <section class="bg-neutral-900 py-8">
