--- a/templates/index.html
+++ b/templates/index.html
@@ -35,13 +35,13 @@
             <div class="card bg-gray-800 shadow-md p-2 pb-10 mx-5 mb-5">
                 <div class="card-body items-center text-center p-0 mt-4">
                   <div class="relative">
-                <h2 class="card-title text-title-text text-2xl">Exam Title</h2>
+                <h2 class="card-title text-title-text text-2xl">Course Title</h2>
                 {% if i == 1 %}
                       <p class="text-red-400 text-base absolute top-0 -right-10 font-semibold">Free</p>
                  {% endif %}
                 </div>
                 <p class="text-primary-text">Exam Description</p>
-                <p class="text-primary-text btext-bold">Price: </p>
+                <p class="text-primary-text btext-bold">Price: <span class="text-green-500">150</span> Taka </p>
                 <div class="card-actions">
                     <button
                         class="bg-navbar-active hover:bg-navbar-hover text-white transition-all ease-in-out duration-200 border-none text-lg px-6 rounded-md py-2"
@@ -60,9 +60,42 @@
         </div>
   </section>
 
+<!-- Get it on -->
+  <section class="flex justify-center">
+    <button type="button" class="flex items-center justify-center w-60 text-white bg-black rounded-lg h-14">
+        <div class="mr-3">
+            <svg viewBox="30 336.7 120.9 129.2" width="30">
+                <path fill="#FFD400"
+                    d="M119.2,421.2c15.3-8.4,27-14.8,28-15.3c3.2-1.7,6.5-6.2,0-9.7  c-2.1-1.1-13.4-7.3-28-15.3l-20.1,20.2L119.2,421.2z">
+                </path>
+                <path fill="#FF3333"
+                    d="M99.1,401.1l-64.2,64.7c1.5,0.2,3.2-0.2,5.2-1.3  c4.2-2.3,48.8-26.7,79.1-43.3L99.1,401.1L99.1,401.1z">
+                </path>
+                <path fill="#48FF48" d="M99.1,401.1l20.1-20.2c0,0-74.6-40.7-79.1-43.1  c-1.7-1-3.6-1.3-5.3-1L99.1,401.1z">
+                </path>
+                <path fill="#3BCCFF"
+                    d="M99.1,401.1l-64.3-64.3c-2.6,0.6-4.8,2.9-4.8,7.6  c0,7.5,0,107.5,0,113.8c0,4.3,1.7,7.4,4.9,7.7L99.1,401.1z">
+                </path>
+            </svg>
+        </div>
+        <div>
+            <div class="text-xs">
+                GET IT ON
+            </div>
+            <div class="-mt-1 font-sans text-xl font-semibold">
+                Google Play
+            </div>
+        </div>
+        <div class="rounded-full m-2 w-12">
+          <img class="rounded-full" src="https://st.depositphotos.com/1491329/2998/i/450/depositphotos_29984153-stock-photo-spring-nature-beautiful-landscape-green.jpg" alt="App logo">
+        </div>
+      </button>
+</section>
+
+
   <!--  FAQ   -->
   <section class="py-10 mx-auto md:px-24 md:mx-24">
-      <ul class="menu px-1 px-5">
+      <ul class="menu px-1 px-5 border rounded-lg">
         <li>
           <details>
             <summary class="lg:text-3xl text-xl font-semibold text-title-text/80">Frequently Asked Questions</summary>
@@ -104,5 +137,22 @@
           </details>
       </ul>
     </section>
+
+    <!-- Payment Section -->
+  <section>
+    <h3 class="text-title-text text-xl text-center lg:text-2xl font-bold mb-5">Payment With</h3>
+    <div class="flex flex-row lg:flex-row justify-center items-center gap-3 mt-5">
+      <a href="">
+        <img src="{% static 'images/BKash-bKash-Logo.wine.svg' %}" alt="bkash" class="w-20 bg-slate-500 rounded-lg">
+      </a>
+      <a>
+        <img src="{% static 'images/Nagad-Logo.wine.svg' %}" alt="Nagad" class="w-20 bg-slate-500 rounded-lg">
+      </a>
+      <a href="">
+        <img src="{% static 'images/PayPal-Logo.wine.svg' %}" alt="" class="w-20 bg-slate-500 rounded-lg">
+      </a>
+    </div>
+  </section>
+
 
 {% endblock %}
