--- a/templates/login.html
+++ b/templates/login.html
@@ -9,12 +9,12 @@
 {% block body %}
     <!-- component -->
 <!-- component -->
-<div class="bg-no-repeat bg-cover bg-center relative z-[1]">
-    <div class="absolute bg-gradient-to-tr from-neutral-950 to-gray-700 opacity-75 inset-0 z-0">
+<div class="bg-no-repeat bg-cover bg-center relative z-[1] p-100">
+    <div class="absolute bg-transparent opacity-75 inset-0 z-0">
 
     </div>
   <div class="min-h-screen sm:flex mt-100 sm:flex-row mx-0 justify-center">
-      <div class="flex-col flex  self-center px-15 pt-15 sm:max-w-5xl xl:max-w-2xl  z-10">
+      <div class="flex-col flex  self-center px-15 pt-10 sm:max-w-5xl xl:max-w-2xl  z-10">
         <div class="self-start hidden lg:flex flex-col  text-white">
           <img src="" class="mb-3">
           <h1 class="mb-3 font-bold text-5xl">Hi ? Welcome Back ... </h1>
@@ -22,13 +22,13 @@
             and publishing industries for previewing layouts and visual mockups</p>
         </div>
       </div>
-      <div class="flex justify-center self-center  z-10">
-        <div class="p-12 bg-white mx-auto rounded-2xl w-100 z-[2]">
-            <div class="mb-4">
+      <div class="flex justify-center self-center mt-8 p-5 mb-10 z-10">
+        <div class="p-6 bg-white mx-auto rounded-2xl w-101 z-[2]">
+            <div class="mb-2">
               <h3 class="font-semibold text-2xl text-gray-800">Sign In </h3>
               <p class="text-gray-500">Please sign in to your account.</p>
             </div>
-            <div class="space-y-5">
+            <div class="space-y-2">
                 <div class="space-y-2">
                     <label class="text-sm font-medium text-gray-700 tracking-wide">Full Name </label>
                     <input class=" w-full text-base px-4 py-2 border  border-gray-300 rounded-lg focus:outline-none focus:border-green-400" type="text" placeholder="Enter name">
@@ -50,8 +50,8 @@
 <!--                        Remember me-->
 <!--                    </label>-->
 <!--                </div>-->
-              <div class="text-sm">
-                <a href="#" class="text-red-300 hover:text-green-500">
+              <div class="text-sm  mt-3">
+                <a href="#" class="text-red-900 hover:text-green-500">
                   Forgot your password?
                 </a>
               </div>
