Working on login system

--- a/templates/verification.html
+++ b/templates/verification.html
@@ -16,10 +16,14 @@
     <div class="mx-auto flex w-full max-w-md flex-col space-y-2">
       <div class="flex flex-col items-center justify-center text-center space-y-2">
         <div class="font-semibold text-3xl">
-          <p>Email Verification</p>
+          <p>
+            {% if request.session.lang == 'en' %} Number Verification {% else %} নাম্বার ভেরিফিকেশন {% endif %}
+          </p>
         </div>
         <div class="flex flex-row text-sm font-medium text-black-400">
-          <p>We have sent a code to your Number 01729576685</p>
+          <p>
+            {% if request.session.lang == 'en' %} We have sent a code to your Number {% else %} আমরা আপনার নাম্বারে একটি কোড পাঠিয়েছি। দয়া করে কোডটি এখানে বসান। নাম্বারঃ {% endif %} {{ request.session.number }}
+          </p>
         </div>
       </div>
 
