--- a/templates/base.html
+++ b/templates/base.html
@@ -88,61 +88,63 @@
                     <img src="{% static 'images/close.png' %}" alt="close" class="w-20">
                 </li>
                 <li
-                  class="active hover:text-navbar-hover text-navbar-active transition-all ease-in-out duration-200"
-                >
-                  <a href="#">Home</a>
+                  class="active hover:text-navbar-hover text-navbar-active transition-all ease-in-out duration-200">
+                  <a href="/">
+                   {% if request.session.lang == 'en' %}  Home {% else %} হোম {% endif %}
+                  </a>
                 </li>
                 <li>
                   <a
                     href="#"
-                    class="hover:text-navbar-hover transition-all ease-in-out duration-200"
-                    >All Exam</a
-                  >
+                    class="hover:text-navbar-hover transition-all ease-in-out duration-200">
+                   {% if request.session.lang == 'en' %} All Exam {% else %} সব পরীক্ষা {% endif %}
+                  </a>
                 </li>
                 <li>
                   <a
-                    href="#"
-                    class="hover:text-navbar-hover transition-all ease-in-out duration-200"
-                    >Our App</a
-                  >
+                    href="https://play.google.com/store/apps/details?id=188276"
+                    class="hover:text-navbar-hover transition-all ease-in-out duration-200">
+                    {% if request.session.lang == 'en' %}  Our App {% else %} আমাদের অ্যাপ {% endif %}
+                  </a>
                 </li><li>
                   <a
                     href="#"
-                    class="hover:text-navbar-hover transition-all ease-in-out duration-200"
-                    >Notices</a
-                  >
+                    class="hover:text-navbar-hover transition-all ease-in-out duration-200">
+                    {% if request.session.lang == 'en' %}  Notice {% else %} নোটিশ {% endif %}
+                  </a>
                 </li>
                 <li>
                   <a
-                    href="#"
-                    class="hover:text-navbar-hover transition-all ease-in-out duration-200"
-                    >FAQ</a
-                  >
+                    href="#faq"
+                    class="hover:text-navbar-hover transition-all ease-in-out duration-200">
+                    {% if request.session.lang == 'en' %}  FAQ {% else %} জিজ্ঞাসা {% endif %}
+                  </a>
                 </li>
                 <li>
                   <a
-                    href="#"
-                    class="hover:text-navbar-hover transition-all ease-in-out duration-200"
-                    >Contact Us</a
-                  >
+                    href="#contact_us"
+                    class="hover:text-navbar-hover transition-all ease-in-out duration-200">
+                    {% if request.session.lang == 'en' %}  Contact Us {% else %} যোগাযোগ করুন {% endif %}
+                  </a>
                 </li>
                 <div class="divider md:hidden"></div>
                 <div class="lg ml-1 md:hidden">
-                  <a
-                    class="py-2 hover:text-navbar-hover rounded-lg cursor-pointer pl-2 text-lg  transition-all ease-in-out duration-200"
-                    >Bangla</a
-                  >/<a
-                    class="hover:text-navbar-hover text-navbar-active text-lg py-2 pr-2 cursor-pointer rounded-lg transition-all ease-in-out duration-200"
+                  <a href="/?lang=bn"
+                    class="py-2 hover:text-navbar-hover {% if request.session.lang == 'bn' %} text-navbar-active {% endif %} rounded-lg cursor-pointer pl-2 text-lg  transition-all ease-in-out duration-200"
+                    >বাংলা</a>
+                  /
+                  <a href="/?lang=en"
+                    class="py-2 hover:text-navbar-hover {% if request.session.lang == 'en' %} text-navbar-active {% endif %}  text-lg pr-2 cursor-pointer rounded-lg transition-all ease-in-out duration-200"
                     >English</a>
                 </div>
               </ul>
             </div>
 
             <div class="hidden md:block lg ml-1">
-                  <a
+                  <a href="/?lang=bn"
                     class="py-2 btn btn-ghost hover:text-navbar-hover rounded-lg cursor-pointer pl-2 text-sm active text-navbar-active transition-all ease-in-out duration-200"
-                    >Bangla</a
-                  >/<a
+                    >বাংলা</a
+                  >/<a href="/?lang=en"
                     class="hover:text-navbar-hover btn btn-ghost text-sm py-2 pr-2 cursor-pointer rounded-lg transition-all ease-in-out duration-200"
                     >English</a
                   >
@@ -151,11 +153,10 @@
           </div>
           <div class="h-full relative">
             <a href="#" class="text-center whitespace-nowrap text-xl absolute top-1 left-0 -translate-x-1.11 translate-y-1">
-              Vasha Academy
+              {% if request.session.lang == 'en' %} Vasha Academy {% else %} ভাষা একাডেমী {% endif %}
             </a>
           </div>
           <div class="">
-
             {% if request.user.is_authenticated %}
 
             <div class="relative">
@@ -173,18 +174,19 @@
                 class="absolute right-5 top-12 hidden menu menu-sm bg-stone-200 rounded-b-md z-[1] mt-3 w-52 p-2 shadow text-2xl space-y-2">
                 <li><a>Mohammad Saikat Islam</a></li>
                 <li><a>01521771635</a></li>
-                <li><a
+                <li><a href="{% url 'customer:logout' %}"
                   class="py-2 mt-3 flex justify-center px-2 bg-navbar-active hover:bg-navbar-hover text-white transition-all ease-in-out duration-200"
-                  >Log Out</a
-                ></li>
+                  >
+                  {% if request.session.lang == 'en' %} Log Out {% else %} লগ আউট {% endif %}
+                </a></li>
               </ul>
             </div>
             {% else %}
-            <a
-              class="bg-navbar-active hover:bg-navbar-hover text-white transition-all ease-in-out duration-200 rounded-lg my-2 mt-2 p-2 h-5"
-              >Login/Sign up
+            <a href="{% url 'customer:login' %}"
+              class="bg-navbar-active hover:bg-navbar-hover text-white transition-all ease-in-out duration-200 rounded-lg my-2 mt-2 p-2 h-5">
+              {% if request.session.lang == 'en' %} Login/Sign up {% else %} লগইন/সাইন আপ {% endif %}
             </a>
-             {% endif %}
+            {% endif %}
 
           </div>
         </div>
@@ -192,19 +194,20 @@
       <!-- navbar ends -->
     </header>
 
+
     <main class="mx-auto container px-2 mt-15 md:px-0 relative">
       <br>
 
       <div class="top-64 fixed right-5 z-[10]">
         <button
             class="bg-navbar-active hover:bg-navbar-hover text-white transition-all ease-in-out duration-200 border-none text-lg rounded-full p-2 flex gap-1 items-center"
-            onclick="my_modal_3.showModal()"
+            onclick="contact_us_modal.showModal()"
             >
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M7.5 8.25h9m-9 3H12m-9.75 1.51c0 1.6 1.123 2.994 2.707 3.227 1.129.166 2.27.293 3.423.379.35.026.67.21.865.501L12 21l2.755-4.133a1.14 1.14 0 0 1 .865-.501 48.172 48.172 0 0 0 3.423-.379c1.584-.233 2.707-1.626 2.707-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0 0 12 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018Z" />
               </svg>
         </button>
-        <dialog id="my_modal_3" class="modal">
+        <dialog id="contact_us_modal" class="modal">
           <div class="modal-box bg-gray-950">
             <form method="dialog">
               <button
@@ -213,26 +216,28 @@
               </button
               >
             </form>
-          <!-- main content -->
+            <!-- main content -->
             <div class="space-y-3">
-              <h3 class="text-title-text text-xl text-center lg:text-2xl font-bold">Ask Any Question</h3>
-              <button
+              <h3 class="text-title-text text-xl text-center lg:text-2xl font-bold">
+              {% if request.session.lang == 'en' %} Ask Any Question {% else %} যেকোনো প্রশ্ন করুন {% endif %}
+              </h3>
+              <a href="sms://+8801521771635&body=[I need help]"
               class="bg-navbar-active hover:bg-navbar-hover text-white transition-all ease-in-out duration-200 border-none text-lg rounded-lg p-2 flex gap-1 items-center justify-center w-full"
               ><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M7.5 8.25h9m-9 3H12m-9.75 1.51c0 1.6 1.123 2.994 2.707 3.227 1.129.166 2.27.293 3.423.379.35.026.67.21.865.501L12 21l2.755-4.133a1.14 1.14 0 0 1 .865-.501 48.172 48.172 0 0 0 3.423-.379c1.584-.233 2.707-1.626 2.707-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0 0 12 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018Z" />
-              </svg> Chat With Us
-              </button
-            >
-            <button
+              </svg>
+                {% if request.session.lang == 'en' %}   Chat With Us {% else %} মেসেজ ক্রুন {% endif %}
+              </a>
+            <a href="https:wa.me/+8801521771635"
               class="text-navbar-active hover:bg-navbar-hover border border-gray-700 transition-all ease-in-out duration-200 text-lg rounded-lg p-2 flex gap-1 items-center justify-center w-full font-semibold hover:text-white"
-              ><i class="fa-brands text-2xl fa-whatsapp"></i> Text in WhatsApp
-              </button
-            >
-            <button
+              ><i class="fa-brands text-2xl fa-whatsapp"></i>
+              {% if request.session.lang == 'en' %}   Text in WhatsApp {% else %} হোয়াটস অ্যাপে মেসেজ দিন {% endif %}
+            </a>
+            <a href="tel:+8801521771635"
               class="text-navbar-active hover:bg-navbar-hover transition-all ease-in-out duration-200 text-lg rounded-lg p-2 flex gap-1 items-center justify-center w-full font-semibold hover:text-white"
-              ><i class="text-2xl fa-solid fa-phone"></i> Call Us On 9990
-              </button
-            >
+              ><i class="text-2xl fa-solid fa-phone"></i>
+              {% if request.session.lang == 'en' %}  Call Us {% else %} কল করুন {% endif %}
+            </a>
           </div>
         </div>
         </dialog>
@@ -247,7 +252,9 @@
 
       <section class="py-6">
         <!-- follow us -->
-        <h3 class="text-title-text text-xl text-center lg:text-2xl font-bold pt-10 pb-4">Follow Us</h3>
+        <h3 class="text-title-text text-xl text-center lg:text-2xl font-bold pt-10 pb-4">
+          {% if request.session.lang == 'en' %}  Follow Us {% else %} কল করুন {% endif %}
+        </h3>
         <div class="flex justify-center items-center gap-8">
           <a href="#"><i class="text-4xl text-blue-600 fa-brands fa-facebook"></i></a>
           <a href="#"><i class="text-4xl text-red-700 fa-brands fa-youtube"></i></a>
@@ -256,7 +263,9 @@
         </div>
 
         <!-- contact us -->
-        <h3 class="text-title-text text-xl text-center lg:text-2xl font-bold pt-10 pb-4">Contact Us</h3>
+        <h3 id="contact_us" class="text-title-text text-xl text-center lg:text-2xl font-bold pt-10 pb-4">
+          {% if request.session.lang == 'en' %}  Contact Us {% else %} আমাদের ফলো করুন{% endif %}
+        </h3>
         <div class="flex justify-center">
         <div class="space-y-3">
           <div class="flex gap-2 items-center bg-pink-900 p-2 rounded-lg"><i class="text-2xl text-blue-400 fa-solid fa-phone"></i><p class="text-primary-text/80">16780</p></div>
