--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,6 @@
   </section>
 
   <!--  Courses-->
-
   <section class="py-10 w-2/3 h-200 lg:h-250 mx-auto text-center pb-15">
         <!-- title  -->
         <h3 class="text-title-text text-3xl lg:text-5xl mb-5 font-black">UBT Exam 2024</h3>
@@ -94,11 +93,13 @@
 
 
   <!--  FAQ   -->
-  <section class="py-10 mx-auto md:px-24 md:mx-24">
+  <section id="faq" class="py-10 mx-auto md:px-24 md:mx-24">
       <ul class="menu px-1 px-5 border rounded-lg">
         <li>
           <details>
-            <summary class="lg:text-3xl text-xl font-semibold text-title-text/80">Frequently Asked Questions</summary>
+            <summary class="lg:text-3xl text-xl font-semibold text-title-text/80">
+                {% if request.session.lang == 'en' %}  Frequently Asked Questions {% else %} জিজ্ঞাসা সমূহ{% endif %}
+            </summary>
             <!-- Questions -->
             <div class="rounded-t-none p-2 space-y-2">
               <!-- Question one  -->
@@ -140,7 +141,9 @@
 
     <!-- Payment Section -->
   <section>
-    <h3 class="text-title-text text-xl text-center lg:text-2xl font-bold mb-5">Payment With</h3>
+    <h3 class="text-title-text text-xl text-center lg:text-2xl font-bold mb-5">
+        {% if request.session.lang == 'en' %} Payment Methods {% else %} পেমেন্ট মাধ্যম {% endif %}
+    </h3>
     <div class="flex flex-row lg:flex-row justify-center items-center gap-3 mt-5">
       <a href="">
         <img src="{% static 'images/BKash-bKash-Logo.wine.svg' %}" alt="bkash" class="w-20 bg-slate-500 rounded-lg">
