--- a/templates/login.html
+++ b/templates/login.html
@@ -7,8 +7,6 @@
 
 
 {% block body %}
-    <!-- component -->
-<!-- component -->
 <div class="bg-no-repeat bg-cover bg-center relative z-[1] p-100">
     <div class="absolute bg-transparent opacity-75 inset-0 z-0">
 
@@ -25,44 +23,61 @@
       <div class="flex justify-center self-center mt-8 p-5 mb-10 z-10">
         <div class="p-6 bg-white mx-auto rounded-2xl w-101 z-[2]">
             <div class="mb-2">
-              <h3 class="font-semibold text-2xl text-gray-800">Sign In </h3>
-              <p class="text-gray-500">Please sign in to your account.</p>
+              <h3 class="font-semibold text-2xl text-gray-800">
+                {% if request.session.lang == 'en' %} Sign In {% else %} লগইন/ সাইন আপ {% endif %}
+              </h3>
             </div>
             <div class="space-y-2">
-                <div class="space-y-2">
-                    <label class="text-sm font-medium text-gray-700 tracking-wide">Full Name </label>
-                    <input class=" w-full text-base px-4 py-2 border  border-gray-300 rounded-lg focus:outline-none focus:border-green-400" type="text" placeholder="Enter name">
-                </div>
-                <div class="space-y-2">
-                    <label class="text-sm font-medium text-gray-700 tracking-wide">Mobile Number</label>
-                    <input class=" w-full text-base px-4 py-2 border  border-gray-300 rounded-lg focus:outline-none focus:border-green-400" type="number" placeholder="mail@gmail.com">
-                </div>
-                <div class="space-y-2">
-                    <label class="mb-5 text-sm font-medium text-gray-700 tracking-wide">
-                    Password
-                    </label>
-                    <input class="w-full content-center text-base px-4 py-2 border  border-gray-300 rounded-lg focus:outline-none focus:border-green-400" type="" placeholder="Enter your password">
-                </div>
-                <div class="flex items-center justify-between">
-<!--                <div class="flex items-center">-->
-<!--                    <input id="remember_me" name="remember_me" type="checkbox" class="h-4 w-4 bg-blue-500 focus:ring-blue-400 border-gray-300 rounded">-->
-<!--                    <label for="remember_me" class="ml-2 block text-sm text-gray-800">-->
-<!--                        Remember me-->
-<!--                    </label>-->
-<!--                </div>-->
-              <div class="text-sm  mt-3">
-                <a href="#" class="text-red-900 hover:text-green-500">
-                  Forgot your password?
-                </a>
-              </div>
+                <form method="POST" action="{% url 'customer:login' %}">
+                    {%  csrf_token %}
+                    <div class="space-y-1">
+                        <label class="text-sm font-medium text-gray-700 tracking-wide">
+                           {% if request.session.lang == 'en' %}  Full Name {% else %} নাম {% endif %}
+                        </label>
+                        <input name="fullname" required class=" w-full text-base px-4 py-2 border  border-gray-300 rounded-lg focus:outline-none focus:border-green-400" type="text" placeholder="Enter name">
+                    </div>
+                    <div class="space-y-1">
+                        <label class="text-sm font-medium text-gray-700 tracking-wide">
+                          {% if request.session.lang == 'en' %} Mobile Number {% else %} মোবাইল নাম্বার {% endif %}
+                        </label>
+                        <input name="number" required class=" w-full text-base px-4 py-2 border  border-gray-300 rounded-lg focus:outline-none focus:border-green-400" type="number" placeholder="+88017********">
+                    </div>
+                    <div class="space-y-1">
+                        <label class="mb-5 text-sm font-medium text-gray-700 tracking-wide">
+                            {% if request.session.lang == 'en' %}   Password {% else %} পাসওয়ার্ড {% endif %}
+                        </label>
+                        <input name="password" required class="w-full content-center text-base px-4 py-2 border  border-gray-300 rounded-lg focus:outline-none focus:border-green-400" type="" placeholder="Enter your password">
+                    </div>
+                    <div class="flex items-center justify-between">
+    <!--                <div class="flex items-center">-->
+    <!--                    <input id="remember_me" name="remember_me" type="checkbox" class="h-4 w-4 bg-blue-500 focus:ring-blue-400 border-gray-300 rounded">-->
+    <!--                    <label for="remember_me" class="ml-2 block text-sm text-gray-800">-->
+    <!--                        Remember me-->
+    <!--                    </label>-->
+    <!--                </div>-->
+                    <div class="text-sm  mt-3">
+                        <a href="#" class="text-red-900 hover:text-green-500">
+                          {% if request.session.lang == 'en' %} Forgot your password? {% else %} পাসওয়ার্ড ভুলে গেছেন? {% endif %}
+                        </a>
+                    </div>
+                   </div>
+                    <button type="submit" class="w-full flex justify-center bg-green-400  hover:bg-green-500 text-gray-100 p-3 mt-2 rounded-full tracking-wide font-semibold  shadow-lg cursor-pointer transition ease-in duration-500">
+                        {% if request.session.lang == 'en' %} Proceed  {% else %} এগিয়ে যান {% endif %}
+                    </button>
+                    {{ form.subject.errors }}
+                </form>
             </div>
-            <div>
-              <button type="submit" class="w-full flex justify-center bg-green-400  hover:bg-green-500 text-gray-100 p-3  rounded-full tracking-wide font-semibold  shadow-lg cursor-pointer transition ease-in duration-500">
-                Sign in
-              </button>
+            {% if error %}
+            <div class="flex items-center p-4 mb-4 mt-5 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400" role="alert">
+                  <svg class="flex-shrink-0 inline w-4 h-4 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                    <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
+                  </svg>
+                  <span class="sr-only">Info</span>
+                  <div>
+                    <span class="font-medium"> {{ error }} !</span>
+                  </div>
             </div>
-            </div>
-
+            {% endif %}
         </div>
       </div>
   </div>
