--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,28 @@
         font-weight: 400;
         font-style: normal;
       }
+
+      #id_number_0{
+        width: 5rem;
+        height: 3.5rem;
+        flex: stretch;
+        display: inline-block;
+        border-radius: 12px;
+      }
+
+       #id_number_1{
+        width: 100%;
+        height: 3.5rem;
+        flex: stretch;
+        display: inline-block;
+        border-radius: 20px;
+      }
+
+     {% block extra_style %}
+
+    {% endblock %}
     </style>
+
   </head>
   <body
     class="font-inter bg-gradient-to-tr from-neutral-950 to-gray-700 min-h-screen"
