--- a/templates/notice.html
+++ b/templates/notice.html
@@ -3,25 +3,28 @@
 {% block body %}
 
 <div class="mt-12 p-12 pt-1 flex flex-col items-center gap-5">
-    <ul class="max-w-md flex flex-wrap justify-between bg-amber-200 rounded-lg w-2/3 text-sm font-medium text-center text-gray-500 dark:text-gray-400">
+    <ul class="px-3 py-2 max-w-md flex flex-wrap justify-between items-center bg-amber-200 rounded-lg w-full text-sm font-medium text-center text-gray-500 dark:text-gray-400">
         <li class="me-2 flex-1">
-            <a href="#" class="inline-block px-1 py-3 text-white bg-blue-600 rounded-lg active w-full" aria-current="page">Tab 1</a>
+            <a href="{% url 'notice:notice' %}?country=others" class="inline-block px-1 py-3  text-black w-full h-full {% if country != 'bd' %}. text-white bg-blue-600 rounded-lg active {% endif %}" aria-current="page">UBT notice korea</a>
         </li>
         <li class="me-2 flex-1">
-            <a href="#"  class="inline-block px-1 py-3 rounded-lg w-full hover:text-gray-900 hover:bg-gray-100 dark:hover:bg-gray-800 dark:hover:text-white">Tab 2</a>
+            <a href="{% url 'notice:notice' %}?country=bd"  class="inline-block px-1 py-3 rounded-lg w-full text-black {% if country == 'bd' %} text-white bg-blue-600 rounded-lg active {% endif %}">UBT notice Bangladesh</a>
         </li>
     </ul>
 
-    <div class="max-w-md text-gray-900 divide-y divide-gray-200 dark:text-white dark:divide-gray-700">
-        <div class="flex flex-col pb-3">
-            <p class="text-lg font-semibold">yourname@flowbite.com</p>
-        </div>
-        <div class="flex flex-col py-3">
-            <p class="text-lg font-semibold">92 Miles Drive, Newark, NJ 07103, California, USA</p>
-        </div>
-        <div class="flex flex-col pt-3">
-            <p class="text-lg font-semibold">+00 123 456 789 / +12 345 678</p>
-        </div>
+    <div class="max-w-md text-black divide-y px-2 w-full divide-gray-200 dark:text-white dark:divide-gray-700">
+        {% for notice in notices %}
+        <a href="{{ notice.link }}" class="w-full">
+            <div class="flex flex-row justify-between items-center py-2">
+                <p class="text-lg font-semibold">{{ notice.text }}</p>
+                <i class="fa-solid fa-chevron-right"></i>
+            </div>
+        </a>
+        {% endfor %}
+
+        {% if not notices %}
+            <p class="text-lg text-center">No notice found.</p>
+        {% endif %}
     </div>
 
 </div>
